--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,3 +38,15 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+  deploy:
+    name: Deploy containers
+    runs-on: ubuntu-latest
+    needs: push_to_registry
+    steps:
+      - name: Connect and call command
+        uses: appleboy/ssh-action@master
+        with:
+          username: root
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          script: cd ${{ secrets.WORK_DIR }}; docker compose pull; docker compose up -d
