--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -1,13 +1,56 @@
-name: Deploy published Docker image
+name: Build and Publish Docker image
+
+# Avoids having multiple instances running
+concurrency:
+  group: build-image
+  cancel-in-progress: true
 
 on:
-  registry_package:
-    types: [published]
+  push:
+    tags:
+      - "v*"
+env:
+  registry: ghcr.io
+  image_name: ${{ github.repository }}
 
 jobs:
+  push_to_registry:
+    name: Push image to Github Packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Log in to Github Packages
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: ${{ env.registry }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata
+        id: extract_metadata
+        uses: docker/metadata-action@v4.1.0
+        with:
+          images: ${{ env.registry }}/${{ env.image_name }}
+      
+      - name: Setup Buildx for caching
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3.2.0
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.extract_metadata.outputs.tags }}
+          labels: ${{ steps.extract_metadata.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   deploy:
     name: Deploy containers
     runs-on: ubuntu-latest
+    needs: push_to_registry
     steps:
       - name: Connect and pull
         uses: appleboy/ssh-action@master
@@ -15,4 +58,4 @@ jobs:
           username: debug-cd
           host: ${{ secrets.SSH_HOST }}
           key: ${{ secrets.SSH_KEY }}
-          script: debug-pull
+          script: ~/update.sh
